# supabase-select

./: AGENTS.md  Cargo.toml  README.md
frontend/: README.md  index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Sidebar.tsx  StatusBar.tsx  TerminalPanel.tsx  TopBar.tsx
src/: config.rs  lib.rs  main.rs  manifest.rs  segment.rs  spool.rs  tail.rs  ui.rs  upload.rs  util.rs  watch.rs
