[package]
name = "agent-uploader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "signal", "time", "net"] }
tokio-util = { version = "0.7", features = ["io", "codec"] }
bytesize = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["macros", "serde", "formatting", "parsing"] }
retry = "2"
path-absolutize = "3"
parking_lot = "0.12"
sha2 = "0.10"
hex = "0.4"
directories = "5"
futures = "0.3"
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
flate2 = { version = "1", features = ["rust_backend"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
